# syndicatefund

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATA.md  Dockerfile  README.md  WEATHER_TRADING_RESEARCH.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  railway.toml  simulate.py
.next/: trace
data/: latest_comms.json  portfolio_state.json  whale_history.json
docs/: signal-weight-research.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: logo-concepts.html  mascot-concepts.html
hivemind/: config.py  display.py  main.py
hivemind/agents/: base.py  dynamic.py  team_manager.py
hivemind/aggregator/: signal_aggregator.py
hivemind/api/: app.py  dependencies.py
hivemind/backtest/: __init__.py  __main__.py  engine.py  metrics.py  walk_forward.py
hivemind/board/: cpo_agent.py  cso_agent.py  cto_agent.py  guardrails.py  prompt_templates.py  session.py
hivemind/core/: agent_registry.py  encryption.py  orchestrator.py
hivemind/data/: binance_client.py  blockchain.py  coingecko.py  data_layer.py  defi_llama.py  derivatives.py  fear_greed.py  historical.py  historical_data_layer.py  hot_coins.py  liquidations.py  models.py  news_sentiment.py  polymarket.py  reddit.py  technical_indicators.py  whale_alert.py  whales.py
hivemind/db/: models.py  seed.py  session.py
hivemind/evaluation/: performance_tracker.py
hivemind/execution/: paper_trader.py  trade_ledger.py  trade_monitor.py
hivemind/executive/: ceo_agent.py  ceo_knowledge_base.md  ceo_writer.py  coo_agent.py  cro_agent.py  perf_agent.py  regime_detector.py  (+1 more)
scripts/: moltbook_register.py  polymarket_setup.py
stocks/: __init__.py  config.py  main.py  watchlist.py
syndicate/: config.py  display.py  main.py
(+395 files in other folders)
